<resources>
    <string name="app_name">Mi Recuerda Fármacos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tvLoginTitle">MI RECUERDA FÁRMACO</string>
    <string name="btnRegister">REGISTRO</string>
    <string name="etLoginEmail">email</string>
    <string name="etLoginContrasenia">contraseña</string>
    <string name="btnLoginAccess">ACCESO</string>
    <string name="tvAppHomeTitle">MENÚ DE OPCIONES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_icon">Google icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="mis_farmacos">MIS FÁRMACOS</string>
    <string name="introducir_nuevo_farmaco">Introducir nuevo fármaco</string>
    <string name="mostrar_mi_lista_de_farmacos">Mostrar mi lista de fármacos</string>
    <string name="buscar_mi_farmaco">Buscar mi fármaco</string>
    <string name="blister_image">Blister image</string>
    <string name="books_and_magnifying_glass">Books and magnifying glass</string>
    <string name="mi_intro_farmaco">MI INTRO-FÁRMACO</string>
    <string name="nombre_completo">Nombre completo....</string>
    <string name="fecha_de_caducidad">Fecha de caducidad....</string>
    <string name="via_administracion">Vía....</string>
    <string name="dolencias_que_trata">Dolencias que trata....</string>
    <string name="nombre_completo_del_medicamento">Nombre completo del medicamento</string>
    <string name="codigo_nacional">Código nacional....</string>
    <string name="mi_lista">MI LISTA</string>
    <string name="mi_busca_farmaco">MI BUSCA-FÁRMACO</string>
    <string name="farmaco_a_buscar">Fármaco a buscar.....</string>
    <string name="magnifying_glass">Magnifying glass</string>
    <string name="mi_info_farmaco">MI INFO-FÁRMACO</string>
    <string name="fecha_de_caducidad_info">Fecha de caducidad :</string>
    <string name="nombre_completo_info">Nombre completo :</string>
    <string name="codigo_nacional_info">Código nacional :</string>
    <string name="via_info">Vía :</string>
    <string name="dolencias_que_trata_info">Dolencias que trata:</string>
    <string name="busca_farmaco_cimav">BUSCA-FÁRMACO CIMAV</string>
    <string name="magnifying_glass_image">Magnifying glass image</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="head_and_brain">Head and brain</string>
    <string name="pills">Pills</string>
    <string name="eliga_una_opcion">Eliga una opción</string>
    <string name="bottle_and_pills">Bottle and pills</string>
    <string name="lector">Lector</string>
    <string name="buscador">Buscador</string>
    <string name="startup">Startup</string>
    <string name="acerca">Acerca</string>
    <string name="contacto">Contacto</string>
    <string name="mis_farmacos_min">Mis fármacos</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_app_home2">AppHome2Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_app_home">AppHomeActivity</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
</resources>