<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_lector"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/lector"/>
        <item android:id="@+id/nav_item_mypharma"
            android:icon="@drawable/ic_baseline_local_pharmacy_24"
            android:title="@string/mis_farmacos_min"/>
        <item android:id="@+id/nav_item_cima"
            android:icon="@drawable/ic_baseline_find_in_page_24"
            android:title="@string/cima"/>
        <item android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout"/>
    </group>

    <item android:title="@string/startup">
        <menu>
            <item android:id="@+id/nav_item_about"
                android:icon="@drawable/ic_baseline_business_24"
                android:title="@string/acerca"/>
            <item android:id="@+id/nav_item_contact"
                android:icon="@drawable/ic_baseline_email_24"
                android:title="@string/contacto">
            </item>
        </menu>
    </item>
</menu>